<?xml version="1.0"?>
<package format="2">
  <name>auto_dock</name>
  <version>1.0.0</version>
  <description>The auto_dock package</description>
  <maintainer email="rachelyoung0407@gmail.com">Jui-Chun Yang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>laser_line_extraction</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

</package>
